src/objects/Monthly_Production__c.object
<CustomObject>
    <description>Stores Monthly Production data from Enphase, production guarantees, and GATS/GIS reported production</description>
    <fields>
        <fullName>Astrum_Estimated__c</fullName>
        <inlineHelpText>Monthly Production based on Astrum estimates</inlineHelpText>
        <label>Astrum Estimated (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enphase_kWh__c</fullName>
        <inlineHelpText>Enphase Production</inlineHelpText>
        <label>Enphase (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Estimated__c</fullName>
        <inlineHelpText>Externall Estimated Production</inlineHelpText>
        <label>External Estimated (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installed_System__c</fullName>
        <label>Installed System</label>
        <referenceTo>Installed_System__c</referenceTo>
        <relationshipLabel>Monthly Production</relationshipLabel>
        <relationshipName>Monthly_Production</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>MONTH(Start_of_Month__c)</formula>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance_Factor__c</fullName>
        <description>Production Performance Factor</description>
        <formula>IF( OR(Astrum_Estimated__c != NULL, Astrum_Estimated__c &gt; 0) , Enphase_kWh__c / Astrum_Estimated__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Production Performance Factor</inlineHelpText>
        <label>Performance Factor</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Guarantee__c</fullName>
        <label>Production Guarantee (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reported__c</fullName>
        <description>Production reported for SREC</description>
        <label>Reported (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_of_Month__c</fullName>
        <label>Start of Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR(Start_of_Month__c))</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Monthly Production</label>
    <nameField>
        <displayFormat>MP-{0000000}</displayFormat>
        <label>Monthly Production ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Production</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>